--- a/home.html
+++ b/home.html
@@ -235,7 +235,7 @@
               a fully functional virtual reality experience by the end of the semester. 
             </p>
             <h5>Project Link</h5>
-            <a href="https://stormy-fjord-40335.herokuapp.com/#">Kuleana</a>
+            <a href="https://github.com/gkupsaw/katies-picture-show">Katie's Picture Show</a>
           </div>
         </div>
 
